--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.java linguist-detectable=true
+*.js linguist-detectable=false
 *.html linguist-detectable=false
-*.css linguist-detectable=true
+*.xml linguist-detectable=false
